--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to My GitHub Pages</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grace Yu - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my personal website hosted on GitHub Pages.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Education & Skills</a></li>
+                <li><a href="projects.html">Technical Experiences</a></li>
+                <li><a href="policy.html">Policy & Volunteering</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1>Welcome to Grace Yu's Website</h1>
+            <p>Hello! I’m Grace Yu, a student at the University of Oxford pursuing my Master of Mathematics in Mathematics and Statistics.</p>
+            <p><a href="assets/cv.pdf" target="_blank">View my CV</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Grace Yu. All rights reserved.</p>
+    </footer>
 </body>
 </html>
