--- a/education.html
+++ b/education.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Education & Skills - Grace Yu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Education & Skills</a></li>
+                <li><a href="projects.html">Technical Experiences</a></li>
+                <li><a href="policy.html">Policy & Volunteering</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section>
+            <h1>Education & Skills</h1>
+            <h2>Education</h2>
+            <p>Details about your degrees, coursework, honors, and scholarships.</p>
+            <h2>Programming Languages</h2>
+            <p>Python, R, MATLAB, SQL, C++, Java, JavaScript.</p>
+            <h2>Natural Languages</h2>
+            <p>English, Mandarin Chinese (native); Dutch, Cantonese Chinese (elementary).</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Grace Yu. All rights reserved.</p>
+    </footer>
+</body>
+</html>
