--- a/policy.html
+++ b/policy.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Policy & Volunteering - Grace Yu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Education & Skills</a></li>
+                <li><a href="projects.html">Technical Experiences</a></li>
+                <li><a href="policy.html">Policy & Volunteering</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section>
+            <h1>Policy & Volunteering</h1>
+            <p>Share your involvement in the policy and ethics space, along with volunteering experiences.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2025 Grace Yu. All rights reserved.</p>
+    </footer>
+</body>
+</html>
