--- a/index.html
+++ b/index.html
@@ -56,6 +56,106 @@
             max-width: 600px;
             margin-bottom: 2rem;
         }
+        iframe {
+            width: 80%;
+            height: 600px;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 1rem;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #ffffff;
+            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Education & Skills</a></li>
+                <li><a href="projects.html">Technical Experiences</a></li>
+                <li><a href="policy.html">Policy & Volunteering</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Welcome to Grace Yu's Website</h1>
+        <p>Hello! I’m Grace Yu, a student at the University of Oxford pursuing my Master of Mathematics in Mathematics and Statistics. Welcome to my personal website where I share my academic journey, technical projects, and reflections.</p>
+        <iframe src="assets/cv.pdf" title="Grace Yu's CV" allowfullscreen></iframe>
+    </main>
+
+    <footer>
+        <p>© 2025 Grace Yu. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grace Yu - Personal Website</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background-color: #ffffff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            padding: 1rem 0;
+        }
+        nav ul li {
+            margin: 0 1.5rem;
+        }
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 600;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: #007acc;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            min-height: 80vh;
+            padding: 2rem;
+        }
+        main h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #222;
+        }
+        main p {
+            font-size: 1.2rem;
+            max-width: 600px;
+            margin-bottom: 2rem;
+        }
         a.cv-link {
             text-decoration: none;
             padding: 0.8rem 1.5rem;
@@ -90,8 +190,8 @@
     </header>
 
     <main>
-        <h1>Welcome to Grace Yu's Website</h1>
-        <p>Hello! I’m Grace Yu, a student at the University of Oxford pursuing my Master of Mathematics in Mathematics and Statistics. Welcome to my personal website where I share my academic journey, technical projects, and reflections.</p>
+        <h1>Hi there 👋</h1>
+        <p>My name is Grace. I am a third-year undergrad reading Maths & Stats at Oxford. I have wide-ranging interests spanning ethics, game theory, data science, artificial intelligence, technology, and finance, and am especially passionate about exploring the intersection of the social/behavioural sciences and quantitative analysis!</p>
         <a class="cv-link" href="assets/cv.pdf" target="_blank">View My CV</a>
     </main>
 
@@ -100,3 +200,4 @@
     </footer>
 </body>
 </html>
+-->
